# SafeAI-Agents

./: .env.example  .gitignore  APPLY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
apps/desktop/: README.md
apps/desktop/scripts/: build-sidecar.ps1  build-sidecar.sh
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
client/: README.md  package-lock.json  package.json
client/src/: App.css  App.tsx  api.ts  apiTools.ts  index.css  types.ts  workbench.css
client/src/components/: ApiKeyModal.tsx  AudioInput.tsx  ChatMessage.tsx  FilesPanel.tsx  McpPanel.tsx  StepInspector.tsx  ToolLog.tsx
client/src/screens/: AgentSelect.tsx  Chat.tsx  Login.tsx  Workbench.tsx
config/: default.yaml
core/: __init__.py  cli.py
core/agents/: registry.py
core/agents/device_guide/: agent.yaml  graph.py  nodes.py
core/agents/device_guide/corpus/: dishwasher_DW500.md  washing_machine_WM2000.md
core/agents/device_guide/skills/device-manuals/: SKILL.md
core/agents/news_writer/: agent.yaml  graph.py  nodes.py
core/agents/news_writer/skills/ai-news/: SKILL.md
core/agents/plumber/: agent.yaml  graph.py  nodes.py
core/agents/plumber/skills/israeli-plumbing/: SKILL.md
core/agents/workbench/: agent.yaml  graph.py  nodes.py
core/auth/: models.py  mongo.py  service.py
core/guardrails/: policies.py  safeai_proxy.py
core/memory/: short_term.py
core/observability/: tracing.py
core/providers/: openrouter.py
core/runtime/: events.py  orchestrator.py  state.py
core/security/: api_keys.py  permissions.py  secrets.py
core/server/: __main__.py  app.py
core/tools/: stt.py
core/tools/browser/: __init__.py
core/tools/code_exec/: __init__.py  runner.py
core/tools/mcp/: __init__.py  client.py  registry.py
core/tools/rag/: __init__.py  store.py
core/tools/skills/: __init__.py  loader.py
core/tools/web/: __init__.py  search.py
docs/: AGENT_CHECKLIST.md  AGENT_HOWTO.txt  FILE_GUIDE.md
evals/: runner.py
evals/datasets/: news_writer.yaml  plumber.yaml
evals/suites/: news_writer.py  plumber.py
infra/mcp-servers/: servers.yaml
infra/sandbox/: Dockerfile  README.md
tests/: test_smoke.py
