[package]
name = "ai-agents-desktop"
version = "0.1.0"
description = "Desktop shell for the AI Agents core (FastAPI sidecar + React UI)."
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
